fixed code spacing and geo

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -23,7 +23,7 @@
 #toy-chest {
 	background-color: #a7f4fe;
 	height: 602px;
-	background-image: url("geometry2.png");
+	background-image: url("/images/geometry2.png");
 
 	.toy-description {
 		text-align: center;
